--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ feed_show_excerpt: false
 # Build settings
 # Change for local dev
 markdown: kramdown
-##theme: coronastudies-theme
+#theme: coronastudies-theme
 remote_theme:  covidstudies/theme
 plugins:
   - jekyll-feed
