--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,12 @@
 # in the templates via {{ site.myvariable }}.
 author: Corona Studies
 email: "info@coronastudies.org"
-title: Corona Studies. Virus, Immunität, Vorbeugung, Behandlung, Impfstoffe und nichtmedizinische Maßnahmen.
-description: >- # this means to ignore newlines until "baseurl:"
-  Studien, Thesenpapiere und Berichte rund um das Thema Corona, zu Virus, Immunität, Vorbeugung, Behandlung, Impfstoffen und nichtmedizinischen Maßnahmen.
+de:
+  title: Corona Studies. Virus, Immunität, Vorbeugung, Behandlung, Impfstoffe und nichtmedizinische Maßnahmen.
+  description: Studien, Thesenpapiere und Berichte rund um das Thema Corona, zu Virus, Immunität, Vorbeugung, Behandlung, Impfstoffen und nichtmedizinischen Maßnahmen.
+en:
+  title: Corona Studies. Virus, immunity, prevention, treatment, vaccines, and nonmedical measures. 
+  description: Studies related to corona, the virus, immunity, prevention, treatment, vaccines and non-medical measures.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dev.coronastudies.org"
 twitter_username: "coronastudies"
