fix english layout

--- a/_config.yml
+++ b/_config.yml
@@ -29,24 +29,32 @@ telegram_username: "coronastudies"
 language: "de"
 date_format: "%Y-%m-%d"
 
+permalink: "/:year/:month/:day/:title"
+
 collections:
   studies:
     output: true
     permalink: /studies/:name
+  posts_en:
+    output: true
+    permalink: /posts/:name
 
 defaults:
+  - scope:
+      path: ""
+      type: "posts_en"
+    values:
+      layout: "post_en"
   - scope:
       path: ""
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
   - scope:
       path: ""
       type: "studies"
     values:
       layout: "study"
-      comments: true  # add comments to all blog posts
   - scope:
       path: "" # any file that's not a post will be a "page" layout by default
     values:
@@ -59,8 +67,6 @@ feed:
       path: "/studies.xml"
   posts_limit: 20
 
-paginate: 1
-
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
 
@@ -70,11 +76,10 @@ feed_show_excerpt: false
 # Build settings
 # Change for local dev
 markdown: kramdown
-#theme: coronastudies-theme
-remote_theme:  covidstudies/theme
+theme: coronastudies-theme
+#remote_theme:  covidstudies/theme
 plugins:
   - jekyll-feed
-  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
