--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ en:
   title: Corona Studies. Virus, immunity, prevention, treatment, vaccines, and nonmedical measures. 
   description: Studies, thesis papers and reports on the topic of Corona, on the virus, immunity, prevention, treatment, vaccines and non-medical measures.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://coronastudies.org"
+url: "https://dev.coronastudies.org"
 twitter_username: "coronastudies"
 telegram_username: "coronastudies"
 
