--- a/_data/tags_de.yml
+++ b/_data/tags_de.yml
@@ -396,6 +396,9 @@ COVID-19:
 - - "/studies/2021/11/01/2021-11-01_10.1007_s00011-021-01517-3.html"
   - Stoffwechsel- und Entzündungszustand bei SARS-CoV-2 und die potenzielle Rolle
     gewohnheitsmäßiger Bewegung bei der Verringerung des Schweregrads der Erkrankung
+- - "/studies/2021/09/29/2021-09-29_10.1111_jpi.12772.html"
+  - Therapeutisches Potential von Melatonin und melatonergischen Medikamenten bei
+    K18-hACE2-Mäusen, die mit SARS-CoV-2 infiziert sind
 - - "/studies/2020/12/07/2020-12-07_10.1016_j.numecd.2020.12.001.html"
   - 'Ernährung und die Covid-19-Pandemie: Drei Faktoren mit großem Einfluss auf die
     Gesundheit der Bevölkerung'
@@ -1644,6 +1647,9 @@ SARS-CoV-2:
     Fallserienstudie'
 - - "/studies/2021/08/21/2021-08-21_10.1007_s11154-021-09683-9.html"
   - Klinische Aspekte der SARS-CoV-2-Infektion und Vitamin D
+- - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
+  - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
+    oder SARS-CoV-2-Infektion
 - - "/studies/2021/12/03/2021-12-03_10.1093_ajcn_nqab389.html"
   - Zusammenhänge zwischen Vitamin-D-Status, Vitamin-D-Zufuhr und dem Risiko einer
     SARS-CoV-2-Infektion und dem Schweregrad der Coronavirus-Erkrankung 2019
@@ -6928,6 +6934,9 @@ Nährstoffe:
 - - "/studies/2021/10/07/2021-10-07_10.12944_CRNFSJ.9.3.04.html"
   - 'COVID-19-Pandemie und Stärkung des Immunsystems: Die synergistische Rolle von
     Nährstoffen'
+- - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
+  - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
+    oder SARS-CoV-2-Infektion
 Synergistische Rolle:
 - - "/studies/2021/10/07/2021-10-07_10.12944_CRNFSJ.9.3.04.html"
   - 'COVID-19-Pandemie und Stärkung des Immunsystems: Die synergistische Rolle von
@@ -6999,10 +7008,6 @@ Komorbiditäten:
   - Stoffwechsel- und Entzündungszustand bei SARS-CoV-2 und die potenzielle Rolle
     gewohnheitsmäßiger Bewegung bei der Verringerung des Schweregrads der Erkrankung
 Agomelatin:
-- - "/studies/2021/09/29/2021-09-29_10.1111_jpi.12772.html"
-  - Therapeutisches Potential von Melatonin und melatonergischen Medikamenten bei
-    K18-hACE2-Mäusen, die mit SARS-CoV-2 infiziert sind
-COVID- 19:
 - - "/studies/2021/09/29/2021-09-29_10.1111_jpi.12772.html"
   - Therapeutisches Potential von Melatonin und melatonergischen Medikamenten bei
     K18-hACE2-Mäusen, die mit SARS-CoV-2 infiziert sind
@@ -7296,6 +7301,9 @@ Epidemiologie:
 - - "/studies/2021/02/17/2021-02-17_10.3389_fphar.2020.586993.html"
   - 'Potenzielle natürliche Produkte gegen Atemwegsviren: Eine Perspektive für die
     Entwicklung von Anti-COVID-19-Medikamenten'
+- - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
+  - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
+    oder SARS-CoV-2-Infektion
 - - "/studies/2021/07/29/2021-07-29_10.1016_j.jsbmb.2021.105958.html"
   - 'Vitamin-D-Supplementierung vor oder während der COVID-19-Studie geht mit einer
     besseren 3-Monats-Überlebensrate bei geriatrischen Patienten einher: Verlängerungsphase
@@ -9178,27 +9186,15 @@ NAFLD:
 - - "/studies/2021/09/13/2021-09-13_10.3390_ijms22189889.html"
   - Entzündungshemmende Wirkung von Interleukin-6 aus der Muskulatur und seine Beteiligung
     am Fettstoffwechsel
-Public health:
+medizinische Ethik:
 - - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
   - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
     oder SARS-CoV-2-Infektion
-medical ethics:
+Nutzen-Risiko-Verhältnis:
 - - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
   - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
     oder SARS-CoV-2-Infektion
-risk-benefit ratio:
-- - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
-  - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
-    oder SARS-CoV-2-Infektion
-epidemiology:
-- - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
-  - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
-    oder SARS-CoV-2-Infektion
-SARS- CoV- 2:
-- - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
-  - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
-    oder SARS-CoV-2-Infektion
-vaccine adverse events:
+Impfstoff-Nebenwirkungen:
 - - "/studies/2021/12/08/2021-12-08_researchgate_355581860.html"
   - Groß angelegte Studie zum Abklingen des Antikörpertiters nach BNT162b2 mRNA-Impfstoff
     oder SARS-CoV-2-Infektion
